--- a/rn-course/package.json
+++ b/rn-course/package.json
@@ -8,9 +8,9 @@
     "react-test-renderer": "16.0.0"
   },
   "scripts": {
-    "start": "react-native start",
-    "android": "react-native run-android",
-    "ios": "react-native run-ios",
+    "start": "node node_modules/react-native/local-cli/cli.js start",
+    "android": "node node_modules/react-native/local-cli/cli.js run-android",
+    "ios": "node node_modules/react-native/local-cli/cli.js run-ios",
     "test": "node node_modules/jest/bin/jest.js --watch"
   },
   "jest": {
