--- a/rn-course/android/gradle.properties
+++ b/rn-course/android/gradle.properties
@@ -13,8 +13,8 @@
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 #Mon Dec 04 14:38:46 BRST 2017
-systemProp.http.proxyHost=localhost
-systemProp.http.proxyPort=5865
-systemProp.https.proxyHost=localhost
-systemProp.https.proxyPort=5865
+# systemProp.https.proxyHost=localhost
+# systemProp.http.proxyPort=5865
+# systemProp.http.proxyHost=localhost
+# systemProp.https.proxyPort=5865
 android.useDeprecatedNdk=true
